$Id: History,v 1.11 1999-05-12 17:40:03 lockman Exp $

G3toG4 Modification History (reverse chronological order, please !)
--------------------------------------------------------------------
g3tog4-01-00-04 11-May-1999 Lockman
- G3VolTable: greatly simplified. No longer keep a private logical/physical
  volume store. Use G4LogicalVolumeStore and G4PhysicalVolumeStore instead.
  Still keep track of the G3toG4 logical/physical mother.
- G3toG4RotationMatrix.hh: replace forward declaration of G4RotationMatrix
  with header file

g3tog4-01-00-03  6-May-1999 Lockman
- G3MatTable, G3RotTable, G3MedTable: updated to use RWTPtrOrderedVector 
  instead of RWTPtrHashDictionary

g3tog4-01-00-02  5-May-1999 Lockman
- temporarily comment out G4gsdv* code
- G4gstmed: now just store a link between tracking medium number and assoicated
  G4Material pointer
- replaced rw/gdlist with RWTPtrHashDictionary
- replaced iostream.h with G4ios.hh everywhere
- added G3EleTable to manage elements in G3toG4
- tog4.F, g3routines.F: generate gsmixt instructions in call list
- clGeometry.cc: cleaned up and added some default commands
- added G3toG4EventAction and EventActionMessenger classes to draw tracks
- GNUmakefile: clean now cleans g3tog4 and all subdirectories      / 24-Apr-1999 Lockman
- GNUmakefile: cleanf: $(RM) now runs quietly
- GNUmakefile: re-enabled libF target
- README: updated instructions on how to configure environment and make
- G4BuildGeom.cc: replace checkLogVol with checkVol which prints out logical
  volumes and their physical daughters
- G4makevol: use G4LogicalVolume(solid, material, name) constructor.
- test/GNUmakefile: define INCFLAGS
- test/README: modified and shortened
- test/src/G3toG4DetectorConstruction.cc: add SimpleConstruct() method 
  for testing; set visibility of daughters, mother.
- test/include/G3toG4DetectorMocnstruction.hh: added private _lv, _pv
- test/src/G3toG4RunAction.cc: set tracking/verbose 1, run/verbose 1
