@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4gsrotm.cc,v 1.2 1999-05-06 04:26:39 lockman Exp $
+// $Id: G4gsrotm.cc,v 1.3 1999-05-13 03:55:57 lockman Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 #include "G4ThreeVector.hh"
@@ -20,12 +20,14 @@ void PG4gsrotm(RWCString tokens[])
 
     // interpret the parameters
     G4int irot = Ipar[0];
+    
+    // the angles in Geant are in degrees
     G4double theta1 = Rpar[0];
-    G4double phi1 = Rpar[1];
+    G4double phi1   = Rpar[1];
     G4double theta2 = Rpar[2];
-    G4double phi2 = Rpar[3];
+    G4double phi2   = Rpar[3];
     G4double theta3 = Rpar[4];
-    G4double phi3 = Rpar[5];
+    G4double phi3   = Rpar[5];
 
     G4gsrotm(irot, theta1,phi1, theta2,phi2, theta3,phi3);
 }
@@ -65,7 +67,7 @@ void G4gsrotm(G4int irot, G4double theta1, G4double phi1,
     
     G3toG4RotationMatrix* rotp = new G3toG4RotationMatrix;
 
-    rotp->SetRotationMatrixByRow(x,y,z);
+    rotp->SetRotationMatrixByRow(x, y, z);
     
         // add it to the List
 
