@@ -1,7 +1,10 @@
-$Id: History,v 1.11 1999-05-12 17:40:03 lockman Exp $
+$Id: History,v 1.12 1999-05-13 03:55:17 lockman Exp $
 
 G3toG4 Modification History (reverse chronological order, please !)
 --------------------------------------------------------------------
+12-May-1999 Lockman
+- G4makevol.cc: added interface to G4Hype
+
 g3tog4-01-00-04 11-May-1999 Lockman
 - G3VolTable: greatly simplified. No longer keep a private logical/physical
   volume store. Use G4LogicalVolumeStore and G4PhysicalVolumeStore instead.
